# tutorial-pyside6-modern-design

./: LICENSE  README.md  pyproject.toml
01_classic_design/src/: main.py
