[tool.poetry]
name = "tutorial-pyside6-modern-design"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "tutorial_pyside6_modern_design"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pyside6 = "^6.5.1.1"
black = "^23.3.0"
mypy = "^1.3.0"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
